# thermal-scout

./: .coverage  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  LICENSE  MANIFEST.in  README.md  _redirects  app.js  debug_thermal.py  index.html  main.py  netlify.toml  pyproject.toml  run_api.py  styles.css
.github/workflows/: test.yml
docs/: API.md  API_REFERENCE.md  API_TESTING.md  ARCHITECTURE.md  CIRCUITRYLABS-DUAL-INTERFACE-PATTERN.md  DEPLOYMENT.md  LOCAL_DEVELOPMENT.md  META-DEVELOPMENT-FLOW.md  README.md  USER_GUIDE.md  model-explorer-spec.md  soa_ai_energy_calcs.md  terminal_style_report.md
examples/: quick_start.py
tests/: conftest.py  test_api.py  test_cli.py  test_search.py
thermal_scout/: __init__.py  cli.py  search.py
thermal_scout/api/: __init__.py  main.py
