[project]
name = "thermal-scout"
version = "0.1.0"
description = "A thermal-aware Hugging Face model search and exploration CLI buddy"
readme = "README.md"
authors = [
    { name = "Tyler James", email = "tyler.chrestoff@hey.com" }
]
requires-python = ">=3.12"
dependencies = [
    "click>=8.2.1",
    "datasets>=4.0.0",
    "huggingface-hub>=0.33.4",
    "rich>=14.0.0",
    "sentence-transformers>=5.0.0",
    "torch>=2.7.1",
    "transformers>=4.53.2",
    "typer>=0.16.0",
]

[project.scripts]
thermal-scout = "thermal_scout.cli:app"

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
    "mypy>=1.5.0",
    "ruff>=0.1.0",
    "black>=23.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["thermal_scout"]

[dependency-groups]
dev = [
    "pytest>=8.4.1",
    "pytest-asyncio>=1.1.0",
    "pytest-cov>=6.2.1",
    "pytest-mock>=3.14.1",
]
